# hag

./: .clang-format  .gitignore  86c764x.md5  CMakeLists.txt  LICENSE  README.md  makefile
include/hag/: color.h  driver.h  factory.h  farptr.h  ialloc.h  types.h
include/hag/drivers/: imports.h
include/hag/drivers/3dfx/banshee/: banshee.h
include/hag/drivers/3dfx/shared/: regtype.h
include/hag/drivers/3dfx/shared/crtc/: ext0.h  ext1.h  ext2.h  ext3.h  horext.h  verext.h
include/hag/drivers/3dfx/shared/fifo/: agpgaddr.h  agpgstrd.h  agphadh.h  agphadl.h  agpmvcmd.h  agprqsz.h  cmdamax.h  cmdamin.h  cmdbaddr.h  cmdbsize.h  cmdbump.h  cmdfdpth.h  cmdfthrs.h  cmdhcnt.h  cmdhint.h  cmdrdpth.h  cmdrdptl.h  fifobase.h  fifodefr.h  fifodrct.h  fifofunc.h  handler.h  pck0.h  pck1.h  pck2.h  pck3.h  pck4.h  pck5.h  pck6.h  yuvbaddr.h  yuvstride.h
include/hag/drivers/3dfx/shared/funcs/: system.h
include/hag/drivers/3dfx/shared/io/: dacmode.h  drminit0.h  drminit1.h  pllctrl0.h  pllctrl1.h  pllctrl2.h  vgainit0.h  vgainit1.h  viddostr.h  viddsa.h  vidprcfg.h  vidscrs.h
include/hag/drivers/3dfx/shared/mmio2d/: baseaddr.h  breserr.h  clip.h  cmd.h  cmdextra.h  colkey.h  color.h  dstfmt.h  intctrl.h  lncharea.h  lnstl.h  lnstp.h  pattern.h  rop.h  xy.h  (+3 more)
include/hag/drivers/matrox/mystique/: mystique.h
include/hag/drivers/matrox/shared/: data.h  miscout.h  regtype.h
include/hag/drivers/s3/: advfnctl.h  bgcolor.h  bgmix.h  bitplnrm.h  bitplnwm.h  chipid.h  colcomp.h  curxpos.h  curxpos2.h  curypos.h  curypos2.h  ddchw.h  drawcmd.h  drawcmd2.h  dxpdsc.h  dypasc.h  factory.h  fgcolor.h  fgmix.h  gfxprocs.h  hardware.h  instat0.h  linerrt2.h  linerrtr.h  majapcn2.h  majapcnt.h  mmio.h  patx.h  paty.h  pixdtrf.h  pmhw.h  regs.h  shrstrvt.h  trio.h  vidmodes.h  virge.h  wregdata.h  xcoord2.h  yc2asc2.h
include/hag/drivers/s3/attribc/: colplnen.h
include/hag/drivers/s3/crtc/: biosflag.h  bkwcomp1.h  bkwcomp2.h  bkwcomp3.h  chipidrv.h  conf1.h  conf1v2.h  conf2v2.h  crtreglk.h  devidhi.h  devidlo.h  exbiosf1.h  exbiosf3.h  exbiosf4.h  exhorovf.h  exmemct1.h  exmemct2.h  exmemct3.h  exmscct2.h  exsysct1.h  exsysct2.h  exsysct3.h  extmode.h  extrdctl.h  exverovf.h  genout.h  itlrtst.h  linawctr.h  lnawposh.h  lnawposl.h  memconf.h  misc1.h  modectrl.h  reglock1.h  reglock2.h  regs.h  revision.h  stdsfifo.h  sysconf.h
include/hag/drivers/s3/readreg/: regs.h
include/hag/drivers/s3/shared/: advfnctl.h  bgcolor.h  bgmix.h  bitplnrm.h  bitplnwm.h  chipid.h  colcomp.h  curxpos.h  curxpos2.h  curypos.h  curypos2.h  data.h  ddchw.h  drawcmd.h  drawcmd2.h  dxpdsc.h  dypasc.h  featctl.h  fgcolor.h  fgmix.h  gfxprocs.h  instat0.h  linerrt2.h  linerrtr.h  majapcn2.h  majapcnt.h  miscout.h  patx.h  paty.h  pixdtrf.h  pmhw.h  regtype.h  rregdata.h  setupos.h  shrstrvt.h  subsysct.h  subsysst.h  vidsuben.h  wregdata.h  xcoord2.h  (+1 more)
include/hag/drivers/s3/sqrc/: clksync1.h  clksync2.h  dclkvhi.h  dclkvlow.h  extbusrc.h  extseq9.h  extseqd.h  mclkvhi.h  mclkvlow.h  mscextsq.h  rclksync.h  regs.h  unlexseq.h
include/hag/drivers/s3/trio32/: data.h  funcs.h  trio32.h  vidmodes.h
include/hag/drivers/s3/trio64/: data.h  funcs.h  trio.h  trio64.h  vidmodes.h
include/hag/drivers/vga/: dacdata.h  dacmask.h  dacrdidx.h  dacstat.h  dacwridx.h  data.h  extmsapi.h  featctl.h  funcs.h  instat0.h  instat1.h  miscout.h  modeset.h  regs.h  regtype.h  vga.h  vidmodes.h  vidsuben.h
include/hag/drivers/vga/attribc/: attrmode.h  bordcol.h  colplnen.h  data.h  horpxpan.h  index.h  palette.h  pixelpad.h  regs.h  regtype.h
include/hag/drivers/vga/crtc/: attridxf.h  attridxi.h  cpulatch.h  crtcovfl.h  curendsl.h  curladhi.h  curladlo.h  curstrsl.h  data.h  enhorbln.h  enhorsyn.h  enverbln.h  hordisen.h  hortotal.h  index.h  linecomp.h  maxscanl.h  modectrl.h  prstrwsc.h  regs.h  regtype.h  scrnoffs.h  staddrhi.h  staddrlo.h  sthorbln.h  sthorsyn.h  stverbln.h  undloc.h  verdisen.h  verrtcen.h  verrtcst.h  vertotal.h
include/hag/drivers/vga/gfxc/: bitmask.h  colcmp.h  coldc.h  data.h  ensrdata.h  gfxcmode.h  index.h  mmmctrl.h  rdplnsel.h  regs.h  regtype.h  roprotct.h  srdata.h
include/hag/drivers/vga/sqrc/: chfntsel.h  clkmod.h  data.h  enwrtpl.h  index.h  memodctl.h  regs.h  regtype.h  reset.h
include/hag/math/: math.h
include/hag/math/flt/: flt.h  fltmath.h  m44.h  v2.h  v3.h  v4.h
include/hag/math/fp/: FP.H  FPMATH.H  M44.H  V2.H  V3.H  V4.H
include/hag/math/vec/: vecmath.h
include/hag/support/: allocatr.h
include/hag/system/: bda.h  interrup.h  keyboard.h  machid.h  pci.h  pit.h  sysasm.h
include/hag/testing/: log.h  mock.h  testpat.h
include/hag/vesa/: data.h  ddc.h  pm.h  vidmodes.h
include/support/: allocatr.h  dump.h
research/3dfx/bios/: banshee.inc  vbasg10.asm
research/ati/bios/: m32.asm  r128xla.asm
research/include/: bda.inc  keyboard.inc  pci.inc  pit.inc  vesa.inc  vga.inc
research/matrox/bios/: 858-8.asm  874-6.asm  897-21.asm  899-33.asm  900-33.asm  g100.inc  g200.inc  g400.inc  gshared.inc  myst.inc
research/s3/bios/: 86c764x.asm
src/: color.cpp  driver.cpp  factory.cpp
src/drivers/3dfx/shared/: fifodefr.cpp  modeext.cpp  modes.cpp  modintl.h  sysintl.h  system.cpp
src/drivers/matrox/shared/: data.cpp  modeext.cpp  modes.cpp  modeset.cpp  modintl.cpp  modintl.h  sysintl.h  system.cpp
src/drivers/s3/: charsets.cpp  factory.cpp  hardware.cpp  trio.cpp
src/drivers/s3/shared/: data.cpp
src/drivers/s3/trio32/: data.cpp  funcs.cpp
src/drivers/s3/trio64/: data.cpp  funcs.cpp  trio.cpp
src/drivers/vga/: charsets.cpp  data.cpp  extmsdef.cpp  funcs.cpp  modeset.cpp
src/math/flt/: flt.cpp  m44.cpp
src/math/fp/: FP.CPP  FPTABLES.CPP  M44.CPP  SINTABLE.INL
src/support/: allocatr.cpp
src/system/: bda.cpp  pci.cpp  pit.cpp
src/testing/: log.cpp  mock.cpp  testpat.cpp
src/vesa/: data.cpp
support/: allocatr.cpp  dump.cpp
tests/: allhdrs.h  bansh.cpp  bantst.cpp  mgatst.cpp  mode.cpp  mode.h  mtxdump.cpp  myst.cpp  mystst.cpp  t64clean.cpp  t64data.cpp  t64port.cpp  t64tests.cpp  test13.cpp  tests.cpp  tstmodes.cpp
tools/: memdmp.cpp  s3regdmp.cpp
(+404 files in other folders)
